//
// Created by NikitaGriazin on 02.02.2025.
//

#ifndef SW_BATTLE_TEST_STAT_TYPE_HPP
#define SW_BATTLE_TEST_STAT_TYPE_HPP

enum class StatType {
	Strength,
	Agility,
	Power,
	Spirit,
	Range
};

#endif	//SW_BATTLE_TEST_STAT_TYPE_HPP
